x-pack/plugin/plesql/src/main/java/org/elasticsearch/xpack/pl/parser/PlEsqlProcedureParser.java
/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0; you may not use this file except in compliance with the Elastic License
 * 2.0.
 */

package org.elasticsearch.xpack.pl.parser;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PlEsqlProcedureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, END=2, EXECUTE=3, DECLARE=4, SET=5, IF=6, ELSE=7, ELSEIF=8, ENDIF=9,
		FOR=10, IN=11, WHILE=12, LOOP=13, ENDLOOP=14, TRY=15, CATCH=16, FINALLY=17,
		ENDTRY=18, FUNCTION=19, END_FUNCTION=20, THEN=21, INT_TYPE=22, FLOAT_TYPE=23,
		STRING_TYPE=24, DATE_TYPE=25, PLUS=26, MINUS=27, MULTIPLY=28, DIVIDE=29,
		GREATER_THAN=30, LESS_THAN=31, NOT_EQUAL=32, GREATER_EQUAL=33, LESS_EQUAL=34,
		PIPE=35, DOT_DOT=36, DOT=37, ASSIGN=38, LPAREN=39, RPAREN=40, COMMA=41,
		SEMICOLON=42, COLON=43, ID=44, FLOAT=45, INT=46, STRING=47, COMMENT=48,
		WS=49, ESQL_QUERY=50;
	public static final int
		RULE_procedure = 0, RULE_statement = 1, RULE_execute_statement = 2, RULE_declare_statement = 3,
		RULE_variable_declaration_list = 4, RULE_variable_declaration = 5, RULE_assignment_statement = 6,
		RULE_if_statement = 7, RULE_loop_statement = 8, RULE_try_catch_statement = 9,
		RULE_function_definition = 10, RULE_function_call_statement = 11, RULE_function_call = 12,
		RULE_parameter_list = 13, RULE_parameter = 14, RULE_argument_list = 15,
		RULE_condition = 16, RULE_expression = 17, RULE_datatype = 18, RULE_comparison_operator = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"procedure", "statement", "execute_statement", "declare_statement", "variable_declaration_list",
			"variable_declaration", "assignment_statement", "if_statement", "loop_statement",
			"try_catch_statement", "function_definition", "function_call_statement",
			"function_call", "parameter_list", "parameter", "argument_list", "condition",
			"expression", "datatype", "comparison_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'BEGIN'", "'END'", "'EXECUTE'", "'DECLARE'", "'SET'", "'IF'",
			"'ELSE'", "'ELSEIF'", "'END IF'", "'FOR'", "'IN'", "'WHILE'", "'LOOP'",
			"'END LOOP'", "'TRY'", "'CATCH'", "'FINALLY'", "'END TRY'", "'FUNCTION'",
			"'END FUNCTION'", "'THEN'", "'INT'", "'FLOAT'", "'STRING'", "'DATE'",
			"'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'!='", "'>='", "'<='", "'|'",
			"'..'", "'.'", "'='", "'('", "')'", "','", "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGIN", "END", "EXECUTE", "DECLARE", "SET", "IF", "ELSE", "ELSEIF",
			"ENDIF", "FOR", "IN", "WHILE", "LOOP", "ENDLOOP", "TRY", "CATCH", "FINALLY",
			"ENDTRY", "FUNCTION", "END_FUNCTION", "THEN", "INT_TYPE", "FLOAT_TYPE",
			"STRING_TYPE", "DATE_TYPE", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "GREATER_THAN",
			"LESS_THAN", "NOT_EQUAL", "GREATER_EQUAL", "LESS_EQUAL", "PIPE", "DOT_DOT",
			"DOT", "ASSIGN", "LPAREN", "RPAREN", "COMMA", "SEMICOLON", "COLON", "ID",
			"FLOAT", "INT", "STRING", "COMMENT", "WS", "ESQL_QUERY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlEsqlProcedure.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlEsqlProcedureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PlEsqlProcedureParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PlEsqlProcedureParser.END, 0); }
		public TerminalNode EOF() { return getToken(PlEsqlProcedureParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(BEGIN);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				statement();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 21990233117816L) != 0) );
			setState(46);
			match(END);
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Execute_statementContext execute_statement() {
			return getRuleContext(Execute_statementContext.class,0);
		}
		public Declare_statementContext declare_statement() {
			return getRuleContext(Declare_statementContext.class,0);
		}
		public Assignment_statementContext assignment_statement() {
			return getRuleContext(Assignment_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public Try_catch_statementContext try_catch_statement() {
			return getRuleContext(Try_catch_statementContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Function_call_statementContext function_call_statement() {
			return getRuleContext(Function_call_statementContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXECUTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				execute_statement();
				}
				break;
			case DECLARE:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				declare_statement();
				}
				break;
			case SET:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				assignment_statement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				if_statement();
				}
				break;
			case FOR:
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				loop_statement();
				}
				break;
			case TRY:
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				try_catch_statement();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 7);
				{
				setState(55);
				function_definition();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 8);
				{
				setState(56);
				function_call_statement();
				}
				break;
			case SEMICOLON:
				enterOuterAlt(_localctx, 9);
				{
				setState(57);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Execute_statementContext extends ParserRuleContext {
		public TerminalNode EXECUTE() { return getToken(PlEsqlProcedureParser.EXECUTE, 0); }
		public TerminalNode ESQL_QUERY() { return getToken(PlEsqlProcedureParser.ESQL_QUERY, 0); }
		public Execute_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterExecute_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitExecute_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitExecute_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Execute_statementContext execute_statement() throws RecognitionException {
		Execute_statementContext _localctx = new Execute_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_execute_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(EXECUTE);
			setState(61);
			match(ESQL_QUERY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declare_statementContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlEsqlProcedureParser.DECLARE, 0); }
		public Variable_declaration_listContext variable_declaration_list() {
			return getRuleContext(Variable_declaration_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Declare_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterDeclare_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitDeclare_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitDeclare_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_statementContext declare_statement() throws RecognitionException {
		Declare_statementContext _localctx = new Declare_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declare_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(DECLARE);
			setState(64);
			variable_declaration_list();
			setState(65);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declaration_listContext extends ParserRuleContext {
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PlEsqlProcedureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlEsqlProcedureParser.COMMA, i);
		}
		public Variable_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterVariable_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitVariable_declaration_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitVariable_declaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaration_listContext variable_declaration_list() throws RecognitionException {
		Variable_declaration_listContext _localctx = new Variable_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			variable_declaration();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(68);
				match(COMMA);
				setState(69);
				variable_declaration();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PlEsqlProcedureParser.ID, 0); }
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(PlEsqlProcedureParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitVariable_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			setState(76);
			datatype();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(77);
				match(ASSIGN);
				setState(78);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assignment_statementContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(PlEsqlProcedureParser.SET, 0); }
		public TerminalNode ID() { return getToken(PlEsqlProcedureParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PlEsqlProcedureParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PlEsqlProcedureParser.SEMICOLON, 0); }
		public Assignment_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterAssignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitAssignment_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitAssignment_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assignment_statementContext assignment_statement() throws RecognitionException {
		Assignment_statementContext _localctx = new Assignment_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assignment_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(SET);
			setState(82);
			match(ID);
			setState(83);
			match(ASSIGN);
			setState(84);
			expression(0);
			setState(85);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_statementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PlEsqlProcedureParser.IF, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public List<TerminalNode> THEN() { return getTokens(PlEsqlProcedureParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(PlEsqlProcedureParser.THEN, i);
		}
		public TerminalNode ENDIF() { return getToken(PlEsqlProcedureParser.ENDIF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(PlEsqlProcedureParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(PlEsqlProcedureParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(PlEsqlProcedureParser.ELSE, 0); }
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitIf_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitIf_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(IF);
			setState(88);
			condition();
			setState(89);
			match(THEN);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90);
				statement();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 21990233117816L) != 0) );
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(95);
				match(ELSEIF);
				setState(96);
				condition();
				setState(97);
				match(THEN);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(98);
					statement();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 21990233117816L) != 0) );
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(108);
				match(ELSE);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(109);
					statement();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 21990233117816L) != 0) );
				}
			}

			setState(116);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Loop_statementContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(PlEsqlProcedureParser.FOR, 0); }
		public TerminalNode ID() { return getToken(PlEsqlProcedureParser.ID, 0); }
		public TerminalNode IN() { return getToken(PlEsqlProcedureParser.IN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode DOT_DOT() { return getToken(PlEsqlProcedureParser.DOT_DOT, 0); }
		public TerminalNode LOOP() { return getToken(PlEsqlProcedureParser.LOOP, 0); }
		public TerminalNode ENDLOOP() { return getToken(PlEsqlProcedureParser.ENDLOOP, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode WHILE() { return getToken(PlEsqlProcedureParser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public Loop_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).enterLoop_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PlEsqlProcedureListener ) ((PlEsqlProcedureListener)listener).exitLoop_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlEsqlProcedureVisitor ) return ((PlEsqlProcedureVisitor<? extends T>)visitor).visitLoop_statement(this);
			else return visitor.visitChildren(this);
		}
	}
